Fixed tilting issue on mobile.
Tilting should be disabled on mobile, but on .project.turned it was still getting applied.

--- a/src/sections/Projects/components/ProjectsContainer.css
+++ b/src/sections/Projects/components/ProjectsContainer.css
@@ -155,6 +155,14 @@
 
     .project {
         transform: rotate3d(0, 0, 0, 0deg);
+        --rotate-x: 0;
+        --rotate-y: 0;
+    }
+    
+    .project.turned {
+        transform: rotateY(180deg);
+        --rotate-x: 0;
+        --rotate-y: 0;
     }
 
     .text-shadow-rotation {
